GITForce/src/objects/Work_Experience__c.object
<CustomObject>
    <fields>
        <fullName>Experience__c</fullName>
        <formula>IF( NOT(ISBLANK(To_Date_del__c)), (To_Date_del__c- From_Date_del__c)/365 , (TODAY()-From_Date_del__c)/365)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Experience</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>From_Date_del__c</fullName>
        <label>From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>To_Date_del__c</fullName>
        <label>To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tools_Used__c</fullName>
        <label>Tools Used</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Work Experience</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Company Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Experience</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>